# nuvoton-m483

./: .gitignore  README.md
example/EX-01-LED/src/ap/: ap.c
example/EX-01-LED/src/bsp/ldscript/: gcc_arm.ld
example/EX-02-UART-ISR/: CMakeLists.txt
example/EX-02-UART-ISR/src/ap/: ap.c
example/EX-02-UART-ISR/src/bsp/startup/: startup_M480.s
example/EX-02-UART-ISR/src/hw/: hw.c  hw.h  hw_def.h
example/EX-02-UART-ISR/src/hw/driver/: uart.c
example/EX-02-UART-ISR/src/lib/Nuvoton/StdDriver/src/: fmc.c  retarget.c
example/EX-03-CLI/src/ap/: ap.c
example/EX-03-CLI/src/bsp/: bsp.h
example/EX-03-CLI/src/hw/: hw.c  hw.h  hw_def.h
example/EX-03-CLI/src/hw/driver/: led.c
example/EX-03-CLI/src/lib/Nuvoton/StdDriver/src/: sdh.c
firmware/m483-fw/src/bsp/: bsp.c
firmware/m483-fw/src/hw/: hw.c  hw_def.h
firmware/m483-fw/src/lib/Nuvoton/CMSIS/Device/Nuvoton/M480/Include/: M480.h
firmware/m483-fw/src/lib/Nuvoton/StdDriver/src/: can.c  qspi.c  rtc.c
